--- a/templates/carrito.html
+++ b/templates/carrito.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carrito - GamerStore</title>
-    <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
 
@@ -12,18 +12,17 @@
         <h1>Carrito de Compras</h1>
         <nav>
             <ul>
-                <li><a href="index.html" class="active">Inicio</a></li>
-                <li><a href="mas_jugados.html">Mas jugados</a></li>
-                <li><a href="dota.html">Dota 2</a></li>
-                <li><a href="minecraft.html">Minecraft</a></li>
-                <li><a href="pou.html">Pou</a></li>
-                <li><a href="left.html">Left 4 Dead</a></li>
-                <li><a href="fortnite.html">Fortnite</a></li>
-                <li><a href="gta5.html">GTA V</a></li>
-                <li><a href="ApiSuerte.html">Prueba suerte</a></li>
-                <li><a href="carrito.html" class="active">Carrito</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-      </ul>
+            <li><a href="{{ url_for('index') }}">Inicio</a></li>
+                <li><a href="{{url_for('masjugados')}}">Mas jugados</a></li>
+                <li><a href="{{url_for('dota')}}">Dota 2</a></li>
+                <li><a href="{{url_for('minecraft')}}">Minecraft</a></li>
+                <li><a href="{{url_for('pou')}}">Pou</a></li>
+                <li><a href="{{url_for('left')}}">Left 4 Dead</a></li>
+                <li><a href="{{url_for('fortnite')}}">Fortnite</a></li>
+                <li><a href="{{url_for('gta5')}}">GTA V</a></li>
+                <li><a href="{{url_for('apisuerte')}}">Prueba suerte</a></li>
+                <li><a href="{{url_for('carrito')}}">Carrito</a></li>
+                <li><a href="{{url_for('contacto')}}">Contacto</a></li>
         </nav>
     </header>
 
@@ -53,7 +52,6 @@
     <footer>
         <p>© 2025 GamerStore / toda la información sobre videojuegos</p>
     </footer>
-
-    <script src="script.js"></script>
+<script src="{{ url_for('static', filename='script.js') }}"></script>
 </body>
 </html>
