--- a/templates/pou.html
+++ b/templates/pou.html
@@ -152,21 +152,18 @@
 
     <div class="social-icons" id="socialIcons">
        
-        
-        <a href="https://www.facebook.com/tu-pagina" target="_blank" class="social-btn facebook">
+ <a href="https://www.facebook.com/?locale=es_LA" target="_blank" class="social-btn facebook">
             <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Facebook">
         </a>
-        <a href="https://www.tiktok.com/@tu-usuario" target="_blank" class="social-btn tiktok">
+        <a href="https://www.tiktok.com/" target="_blank" class="social-btn tiktok">
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRX3f0g0LUJasKu8OvW_-1_zZI4vktRophE_g&s" alt="TikTok">
         </a>
-        <a href="https://www.youtube.com/tu-canal" target="_blank" class="social-btn youtube">
+        <a href="https://www.youtube.com/" target="_blank" class="social-btn youtube">
             <img src="https://upload.wikimedia.org/wikipedia/commons/0/09/YouTube_full-color_icon_%282017%29.svg" alt="YouTube">
         </a>
         <a href="https://x.com/tu-usuario" target="_blank" class="social-btn twitter">
-            <img src="https://img.freepik.com/vector-gratis/aplicacion-twitter-nuevo-logotipo-x-sobre-fondo-negro_1017-45425.jpg?semt=ais_hybrid&w=740&q=80" alt="X">
-        </a>
-    </div>
-</div>
+            <img src="https://x.com/?lang=es" alt="X">
+        </a></div>
   <footer>
     <p>© 2025 GamerStore / toda la informacion sobre videojuegos</p>
   </footer>
