Arreglo de la ruleta de juegos

--- a/templates/index.html
+++ b/templates/index.html
@@ -39,27 +39,27 @@
             <div class="carousel-container">
                 <button class="arrow prev-arrow">❮</button>
                 <div class="game-list">
-                    <div class="game-item"><a href="minecraft.html">
+                    <div class="game-item"><a href="{{url_for('minecraft')}}">
                         <img src="https://static0.thegamerimages.com/wordpress/wp-content/uploads/2022/06/Minecraft-1.jpg" alt="Minecraft">
                         <div class="info"><h3>Minecraft</h3><p>Sandbox • Creatividad</p></div>
                     </a></div>
-                    <div class="game-item"><a href="dota.html">
+                    <div class="game-item"><a href="{{url_for('dota')}}">
                         <img src="https://cdn.steamstatic.com/apps/dota2/images/dota2_social.jpg" alt="Dota 2">
                         <div class="info"><h3>Dota 2</h3><p>MOBA • Estrategia</p></div>
                     </a></div>
-                    <div class="game-item"><a href="gta5.html">
+                    <div class="game-item"><a href="{{url_for('gta5')}}">
                         <img src="https://i.blogs.es/6a071d/gtav/1366_2000.jpg" alt="GTA V">
                         <div class="info"><h3>GTA V</h3><p>Mundo Abierto • Acción</p></div>
                     </a></div>
-                    <div class="game-item"><a href="fortnite.html">
+                    <div class="game-item"><a href="{{url_for('fortnite')}}">
                         <img src="https://dropinblog.net/34253310/files/featured/imagem-2024-09-26-103919931.png" alt="Fortnite">
                         <div class="info"><h3>Fortnite</h3><p>Battle Royale</p></div>
                     </a></div>
-                    <div class="game-item"><a href="left.html">
+                    <div class="game-item"><a href="{{url_for('lef')}}">
                         <img src="https://shared.fastly.steamstatic.com/store_item_assets/steam/apps/500/capsule_616x353.jpg?t=1745368560" alt="Left 4 Dead">
                         <div class="info"><h3>Left 4 Dead</h3><p>Zombies • Coop</p></div>
                     </a></div>
-                    <div class="game-item"><a href="pou.html">
+                    <div class="game-item"><a href="{{url_for('pou')}}">
                         <img src="https://www.coolmathgames.com/sites/default/files/styles/mobile_game_image/public/Pou_OG-logo.jpg.webp?itok=GsE4LZs0" alt="Pou">
                         <div class="info"><h3>Pou</h3><p>Mascota Virtual</p></div>
                     </a></div>
