Arreglo de nombre

--- a/templates/index.html
+++ b/templates/index.html
@@ -55,7 +55,7 @@
                         <img src="https://dropinblog.net/34253310/files/featured/imagem-2024-09-26-103919931.png" alt="Fortnite">
                         <div class="info"><h3>Fortnite</h3><p>Battle Royale</p></div>
                     </a></div>
-                    <div class="game-item"><a href="{{url_for('lef')}}">
+                    <div class="game-item"><a href="{{url_for('left')}}">
                         <img src="https://shared.fastly.steamstatic.com/store_item_assets/steam/apps/500/capsule_616x353.jpg?t=1745368560" alt="Left 4 Dead">
                         <div class="info"><h3>Left 4 Dead</h3><p>Zombies • Coop</p></div>
                     </a></div>
