Correccion de masjugados

--- a/templates/masjugados.html
+++ b/templates/masjugados.html
@@ -37,7 +37,7 @@
     <section class="juegos-populares">
       <div class="cuadricula-juegos">
         
-        <a href="dota.html" class="tarjeta-juego">
+        <a href="{{url_for('dota')}}" class="tarjeta-juego">
           <div class="ranking">#1</div>
           <img src="https://cdn.steamstatic.com/apps/dota2/images/dota2_social.jpg" alt="Dota 2">
           <div class="info-juego">
@@ -47,7 +47,7 @@
           </div>
         </a>
 
-        <a href="minecraft.html" class="tarjeta-juego">
+        <a href="{{url_for('minecraft')}}" class="tarjeta-juego">
           <div class="ranking">#2</div>
           <img src="https://static0.thegamerimages.com/wordpress/wp-content/uploads/2022/06/Minecraft-1.jpg" alt="Minecraft">
           <div class="info-juego">
@@ -57,7 +57,7 @@
           </div>
         </a>
 
-        <a href="gta5.html" class="tarjeta-juego">
+        <a href="{{url_for('gta5')}}" class="tarjeta-juego">
           <div class="ranking">#3</div>
           <img src="https://i.blogs.es/6a071d/gtav/1366_2000.jpg" alt="GTA V">
           <div class="info-juego">
@@ -67,7 +67,7 @@
           </div>
         </a>
 
-        <a href="fortnite.html" class="tarjeta-juego">
+        <a href="{{url_for('fornite')}}" class="tarjeta-juego">
           <div class="ranking">#4</div>
           <img src="https://dropinblog.net/34253310/files/featured/imagem-2024-09-26-103919931.png" alt="Fortnite">
           <div class="info-juego">
