Solucionando errores menores

--- a/templates/masjugados.html
+++ b/templates/masjugados.html
@@ -67,7 +67,7 @@
           </div>
         </a>
 
-        <a href="{{url_for('forntite')}}" class="tarjeta-juego">
+        <a href="{{url_for('fortnite')}}" class="tarjeta-juego">
           <div class="ranking">#4</div>
           <img src="https://dropinblog.net/34253310/files/featured/imagem-2024-09-26-103919931.png" alt="Fortnite">
           <div class="info-juego">
